# BooleanDemo

./: CMakeLists.txt  README  README.md
src/: cgal_boolean.cpp  libigl_boolean.cpp
